# mnforwardbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
forwardbot/: __init__.py  album_buffer.py  approved_store.py  bot.py  config.py  draft_cache.py  extraction.py  keyboards.py  llm.py  main.py  models.py  prompt_modifiers.py  rendering.py  service.py  style_loader.py  validator.py
prompts/: style_examples.md  style_rules.md
tests/: test_album_buffer.py  test_approved_store.py  test_config.py  test_draft_cache.py  test_extraction.py  test_keyboards.py  test_llm_parsing.py  test_rendering.py  test_service.py  test_style_loader.py  test_validator.py
