[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mn-forwardbot"
version = "0.1.0"
description = "Telegram bot that rewrites forwarded channel posts into German drafts with original media."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.26,<4.0",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
]

[project.scripts]
mn-forwardbot = "forwardbot.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["forwardbot*"]
